// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ZaakStatus > No query params passed 1`] = `
<DocumentFragment>
  <div
    class="ams-grid"
  >
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-6-medium ams-grid__cell--span-7-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide _PageHeadingWrap_c5a3f1"
    >
      <div
        class="_PageHeadingInner_c5a3f1"
        id="skip-to-id-AppContent"
      >
        <a
          class="ams-link ams-link--standalone _BackLink_c5a3f1 _MaRouterLink__no-default-underline_aa758a"
          href="/"
          title="Terug naar de vorige pagina"
        >
          <span
            class="ams-icon ams-icon--size-5"
          >
            <svg
              aria-hidden="true"
              focusable="false"
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m22.857 32-16-16 16-16 2.9 2.91L12.677 16l13.08 13.09z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          Terug
        </a>
        <h3
          class="ams-heading ams-heading--level-1 _PageHeading_c5a3f1"
        >
          Status van uw aanvraag
        </h3>
      </div>
    </div>
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-6-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
    >
      <p
        class="ams-paragraph"
      >
        <a
          class="ams-link ams-link--standalone"
          href="/"
        >
          Ga naar het dashboard
        </a>
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ZaakStatus > should show error alert 1`] = `
<DocumentFragment>
  <div
    class="ams-grid"
  >
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-6-medium ams-grid__cell--span-7-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide _PageHeadingWrap_c5a3f1"
    >
      <div
        class="_PageHeadingInner_c5a3f1"
        id="skip-to-id-AppContent"
      >
        <a
          class="ams-link ams-link--standalone _BackLink_c5a3f1 _MaRouterLink__no-default-underline_aa758a"
          href="/"
          title="Terug naar de vorige pagina"
        >
          <span
            class="ams-icon ams-icon--size-5"
          >
            <svg
              aria-hidden="true"
              focusable="false"
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m22.857 32-16-16 16-16 2.9 2.91L12.677 16l13.08 13.09z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          Terug
        </a>
        <h3
          class="ams-heading ams-heading--level-1 _PageHeading_c5a3f1"
        >
          Status van uw aanvraag
        </h3>
      </div>
    </div>
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-6-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
    >
      <section
        class="ams-alert ams-alert--error ams-mb--xs"
      >
        <div
          class="ams-alert__icon"
        >
          <span
            class="ams-icon ams-icon--size-4"
          >
            <svg
              aria-hidden="true"
              focusable="false"
              viewBox="0 0 36 36"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M33.63 30.9H2.37L18 3zm-24.44-4h17.62L18 11.19z"
              />
              <path
                d="M17 16.99h2v4.95h-2zm0 5.95h2v1.95h-2z"
              />
            </svg>
          </span>
        </div>
        <div
          class="ams-alert__content"
        >
          <h2
            class="ams-heading ams-heading--level-4"
          >
            Foutmelding
          </h2>
          <p
            class="ams-paragraph"
          >
            Wij kunnen nu niet alle gegevens tonen, probeer het later nog eens.
          </p>
        </div>
      </section>
      <p
        class="ams-paragraph"
      >
        <a
          class="ams-link ams-link--standalone"
          href="/"
        >
          Ga naar het dashboard
        </a>
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ZaakStatus > should show not found message 1`] = `
<DocumentFragment>
  <div
    class="ams-grid"
  >
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-6-medium ams-grid__cell--span-7-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide _PageHeadingWrap_c5a3f1"
    >
      <div
        class="_PageHeadingInner_c5a3f1"
        id="skip-to-id-AppContent"
      >
        <a
          class="ams-link ams-link--standalone _BackLink_c5a3f1 _MaRouterLink__no-default-underline_aa758a"
          href="/"
          title="Terug naar de vorige pagina"
        >
          <span
            class="ams-icon ams-icon--size-5"
          >
            <svg
              aria-hidden="true"
              focusable="false"
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m22.857 32-16-16 16-16 2.9 2.91L12.677 16l13.08 13.09z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          Terug
        </a>
        <h3
          class="ams-heading ams-heading--level-1 _PageHeading_c5a3f1"
        >
          Status van uw aanvraag
        </h3>
      </div>
    </div>
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-6-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
    >
      <p
        class="ams-paragraph ams-mb--xs"
      >
        Wij kunnen de status van uw aanvraag niet laten zien.
      </p>
      <p
        class="ams-paragraph"
      >
        <a
          class="ams-link ams-link--standalone"
          href="/vergunningen"
        >
          Bekijk het overzicht
        </a>
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ZaakStatus > should show wachten op betaling 1`] = `
<DocumentFragment>
  <div
    class="ams-grid"
  >
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-6-medium ams-grid__cell--span-7-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide _PageHeadingWrap_c5a3f1"
    >
      <div
        class="_PageHeadingInner_c5a3f1"
        id="skip-to-id-AppContent"
      >
        <a
          class="ams-link ams-link--standalone _BackLink_c5a3f1 _MaRouterLink__no-default-underline_aa758a"
          href="/"
          title="Terug naar de vorige pagina"
        >
          <span
            class="ams-icon ams-icon--size-5"
          >
            <svg
              aria-hidden="true"
              focusable="false"
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m22.857 32-16-16 16-16 2.9 2.91L12.677 16l13.08 13.09z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          Terug
        </a>
        <h3
          class="ams-heading ams-heading--level-1 _PageHeading_c5a3f1"
        >
          Status van uw aanvraag
        </h3>
      </div>
    </div>
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-6-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
    >
      <p
        class="ams-paragraph ams-mb--xs"
      >
        Wij kunnen de status van uw aanvraag niet laten zien.
      </p>
      <p
        class="ams-paragraph ams-mb--xs"
      >
        U heeft betaald voor deze aanvraag. Het kan even duren voordat uw aanvraag op Mijn Amsterdam te zien is.
      </p>
      <p
        class="ams-paragraph"
      >
        <a
          class="ams-link ams-link--standalone"
          href="/vergunningen"
        >
          Bekijk het overzicht
        </a>
      </p>
    </div>
  </div>
</DocumentFragment>
`;
